[package]
name = "restaurant-order"
version = "0.1.0"
authors = ["alank <alankan976@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
actix-rt = "0.2.4"
serde = "1.0.99"
reqwest = "0.9.20"
rand = "0.7"